# aegis-password-manager

./: Cargo.toml
src/: main.rs
