[package]
name = "aegis-password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rocket = "=0.5.0-rc.3"
rocket_sync_db_pools = {version ="0.1.0-rc.3", features = ["diesel_sqlite_pool"]}
simple-log = "1.6.0"
diesel = { version = "1.4.8", features = ["sqlite"] }
hex = "0.4.3"
